New example example_unnamed-module_access-from-explicit-module shows that explicit modules can access classes on the classpath (under certain circumstances)