@@ -16,7 +16,9 @@ see https://github.com/accso/java9-jigsaw-examples
 ![Example's Module Dependency Graph](moduledependencies.png)
 
 ### Example shows ...
-The examples illustrates the accessibility rules access to and from the classpath (i.e. in the unnamed module):
-- The `Main` class in `modmain` cannot access classes in the unnamed module (does not compile). So explicit modules cannot access code on the classpath.
+The examples illustrates the accessibility rules access to the classpath (i.e. from an explicit module on the module-path to the unnamed module):
+- Normally explicit modules cannot access code on the classpath.
+- The `Main` class in `modmain` can access classes in the unnamed module only, if an compile and run option `--add-reads modmain=ALL-UNNAMED` is set explicitely. 
+- Note also that he `Main` class in `modmain` cannot access any package on the classpath if an explicit module like `modb` has such a package exported. This is here the case for `pkgb`. The module `modmain` cannot access the class `pkgb.BFromClasspath`!
 
 The script run.sh starts the main class from `modmain`.
